2003-09-21  John Levon  <levon@movementarian.org>

	* Makefile.am: back out broken make clean change

2003-09-21  John Levon  <levon@movementarian.org>

	* Makefile.am: make clean now removes *.html

	* internals.xml: add some outline sections

2003-09-21  John Levon  <levon@movementarian.org>

	* doc/internals.xml: provide a short overview
	and start a glossary

	* libpp/count_array.h:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/profile.cpp:
	* libpp/profile.h:
	* libpp/profile_container.cpp:
	* libpp/profile_container.h:
	* pp/opreport.cpp: replace residual references to
	count groups with profile class concept

2003-09-21  John Levon  <levon@movementarian.org>

	* doc/Makefile.am:
	* doc/internals.xml: start an internals manual ...

2003-09-19  John Levon  <levon@movementarian.org>

	* pp/image_errors.cpp: missing include

2003-09-19  John Levon  <levon@movementarian.org>

	* libopt++/popt_options.h:
	* libopt++/popt_options.cpp: remove additional_help
	stuff, unused for some time

2003-09-18  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/image_flags.h: move to ...

	* libpp/Makefile.am:
	* libpp/image_error.h: ... here, and rename

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: take an in-out bool
	instead of image_flags

	* libpp/arrange_profiles.cpp:
	* libpp/arrange_profiles.h:
	* libpp/locate_images.cpp:
	* libpp/locate_images.h:
	* libpp/profile_spec.cpp:
	* pp/image_errors.cpp:
	* pp/opgprof.cpp:
	* pp/populate.cpp: changes from above

2003-09-18  John Levon  <levon@movementarian.org>

	* libutil++/Makefile.am:
	* libutil++/image_flags.h: flags for image read failure

	* libpp/profile_spec.cpp:
	* libpp/locate_images.h:
	* libpp/locate_images.cpp:
	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: use image_flags

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: use image_flags, no longer error
	out on format failure

	* pp/Makefile.am:
	* pp/image_errors.cpp: